// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bracket options: () only 1`] = `
Array [
  Object {
    "content": "aaa",
    "depth": 0,
    "end": 3,
    "start": 0,
    "type": "text",
  },
  Object {
    "close": ")",
    "depth": 0,
    "end": 9,
    "nodes": Array [
      Object {
        "content": "bbb{}",
        "depth": 1,
        "end": 9,
        "start": 4,
        "type": "text",
      },
    ],
    "open": "(",
    "start": 3,
    "type": "bracket",
  },
  Object {
    "content": "ccc[ddd]",
    "depth": 0,
    "end": 18,
    "start": 10,
    "type": "text",
  },
]
`;

exports[`bracket options: rare option 1`] = `
Array [
  Object {
    "content": "t",
    "depth": 0,
    "end": 1,
    "start": 0,
    "type": "text",
  },
  Object {
    "close": "o",
    "depth": 0,
    "end": 12,
    "nodes": Array [
      Object {
        "content": "shin",
        "depth": 1,
        "end": 6,
        "start": 2,
        "type": "text",
      },
      Object {
        "close": "o",
        "depth": 1,
        "end": 10,
        "nodes": Array [
          Object {
            "content": " ky",
            "depth": 2,
            "end": 10,
            "start": 7,
            "type": "text",
          },
        ],
        "open": "O",
        "start": 6,
        "type": "bracket",
      },
      Object {
        "content": "k",
        "depth": 1,
        "end": 12,
        "start": 11,
        "type": "text",
      },
    ],
    "open": "O",
    "start": 1,
    "type": "bracket",
  },
]
`;

exports[`complex: any bracket 1`] = `
Array [
  Object {
    "close": "]",
    "depth": 0,
    "end": 5,
    "nodes": Array [
      Object {
        "close": ")",
        "depth": 1,
        "end": 4,
        "nodes": Array [
          Object {
            "close": "}",
            "depth": 2,
            "end": 3,
            "nodes": Array [],
            "open": "{",
            "start": 2,
            "type": "bracket",
          },
        ],
        "open": "(",
        "start": 1,
        "type": "bracket",
      },
    ],
    "open": "[",
    "start": 0,
    "type": "bracket",
  },
]
`;

exports[`complex: empty 1`] = `Array []`;

exports[`complex: gata gata 1`] = `
Array [
  Object {
    "content": "aa",
    "depth": 0,
    "end": 2,
    "start": 0,
    "type": "text",
  },
  Object {
    "close": ")",
    "depth": 0,
    "end": 20,
    "nodes": Array [
      Object {
        "close": "}",
        "depth": 1,
        "end": 6,
        "nodes": Array [
          Object {
            "content": "cc",
            "depth": 2,
            "end": 6,
            "start": 4,
            "type": "text",
          },
        ],
        "open": "{",
        "start": 3,
        "type": "bracket",
      },
      Object {
        "content": "bb",
        "depth": 1,
        "end": 9,
        "start": 7,
        "type": "text",
      },
      Object {
        "close": "}",
        "depth": 1,
        "end": 18,
        "nodes": Array [
          Object {
            "content": "c2",
            "depth": 2,
            "end": 12,
            "start": 10,
            "type": "text",
          },
          Object {
            "close": ")",
            "depth": 2,
            "end": 15,
            "nodes": Array [
              Object {
                "content": "dd",
                "depth": 3,
                "end": 15,
                "start": 13,
                "type": "text",
              },
            ],
            "open": "(",
            "start": 12,
            "type": "bracket",
          },
          Object {
            "content": "c2",
            "depth": 2,
            "end": 18,
            "start": 16,
            "type": "text",
          },
        ],
        "open": "{",
        "start": 9,
        "type": "bracket",
      },
      Object {
        "content": "b",
        "depth": 1,
        "end": 20,
        "start": 19,
        "type": "text",
      },
    ],
    "open": "(",
    "start": 2,
    "type": "bracket",
  },
  Object {
    "content": "aa",
    "depth": 0,
    "end": 23,
    "start": 21,
    "type": "text",
  },
  Object {
    "close": ")",
    "depth": 0,
    "end": 26,
    "nodes": Array [
      Object {
        "content": "b2",
        "depth": 1,
        "end": 26,
        "start": 24,
        "type": "text",
      },
    ],
    "open": "(",
    "start": 23,
    "type": "bracket",
  },
  Object {
    "content": "aa",
    "depth": 0,
    "end": 29,
    "start": 27,
    "type": "text",
  },
]
`;

exports[`complex: nest side 1`] = `
Array [
  Object {
    "close": ")",
    "depth": 0,
    "end": 9,
    "nodes": Array [
      Object {
        "close": "}",
        "depth": 1,
        "end": 2,
        "nodes": Array [],
        "open": "{",
        "start": 1,
        "type": "bracket",
      },
      Object {
        "content": "fuga",
        "depth": 1,
        "end": 7,
        "start": 3,
        "type": "text",
      },
      Object {
        "close": "}",
        "depth": 1,
        "end": 8,
        "nodes": Array [],
        "open": "{",
        "start": 7,
        "type": "bracket",
      },
    ],
    "open": "(",
    "start": 0,
    "type": "bracket",
  },
]
`;

exports[`complex: sub empty 1`] = `
Array [
  Object {
    "close": ")",
    "depth": 0,
    "end": 1,
    "nodes": Array [],
    "open": "(",
    "start": 0,
    "type": "bracket",
  },
]
`;

exports[`complex: sub sub empty 1`] = `
Array [
  Object {
    "close": ")",
    "depth": 0,
    "end": 3,
    "nodes": Array [
      Object {
        "close": ")",
        "depth": 1,
        "end": 2,
        "nodes": Array [],
        "open": "(",
        "start": 1,
        "type": "bracket",
      },
    ],
    "open": "(",
    "start": 0,
    "type": "bracket",
  },
]
`;

exports[`complex: with newline 1`] = `
Array [
  Object {
    "content": "hel",
    "depth": 0,
    "end": 3,
    "start": 0,
    "type": "text",
  },
  Object {
    "close": ")",
    "depth": 0,
    "end": 9,
    "nodes": Array [
      Object {
        "content": "lo
go",
        "depth": 1,
        "end": 9,
        "start": 4,
        "type": "text",
      },
    ],
    "open": "(",
    "start": 3,
    "type": "bracket",
  },
  Object {
    "content": "od by",
    "depth": 0,
    "end": 15,
    "start": 10,
    "type": "text",
  },
]
`;

exports[`escape works 1`] = `
Array [
  Object {
    "content": "\\\\",
    "depth": 0,
    "end": 1,
    "start": 0,
    "type": "text",
  },
]
`;

exports[`escape works 2`] = `
Array [
  Object {
    "close": ")",
    "depth": 0,
    "end": 15,
    "nodes": Array [
      Object {
        "content": "(OK)[GOOD]",
        "depth": 1,
        "end": 15,
        "start": 1,
        "type": "text",
      },
    ],
    "open": "(",
    "start": 0,
    "type": "bracket",
  },
]
`;

exports[`nestMax options: stop nest 1 1`] = `
Array [
  Object {
    "close": ")",
    "depth": 0,
    "end": 3,
    "nodes": Array [
      Object {
        "content": "((",
        "depth": 1,
        "end": 3,
        "start": 1,
        "type": "text",
      },
    ],
    "open": "(",
    "start": 0,
    "type": "bracket",
  },
  Object {
    "content": "))",
    "depth": 0,
    "end": 6,
    "start": 4,
    "type": "text",
  },
]
`;

exports[`nestMax options: stop nest 2 1`] = `
Array [
  Object {
    "close": ")",
    "depth": 0,
    "end": 4,
    "nodes": Array [
      Object {
        "close": ")",
        "depth": 1,
        "end": 3,
        "nodes": Array [
          Object {
            "content": "(",
            "depth": 2,
            "end": 3,
            "start": 2,
            "type": "text",
          },
        ],
        "open": "(",
        "start": 1,
        "type": "bracket",
      },
    ],
    "open": "(",
    "start": 0,
    "type": "bracket",
  },
  Object {
    "content": ")",
    "depth": 0,
    "end": 6,
    "start": 5,
    "type": "text",
  },
]
`;

exports[`works: single 1`] = `
Array [
  Object {
    "content": "before",
    "depth": 0,
    "end": 6,
    "start": 0,
    "type": "text",
  },
  Object {
    "close": ")",
    "depth": 0,
    "end": 10,
    "nodes": Array [
      Object {
        "content": "hit",
        "depth": 1,
        "end": 10,
        "start": 7,
        "type": "text",
      },
    ],
    "open": "(",
    "start": 6,
    "type": "bracket",
  },
  Object {
    "content": "after",
    "depth": 0,
    "end": 16,
    "start": 11,
    "type": "text",
  },
]
`;

exports[`works: three nest 1`] = `
Array [
  Object {
    "content": "aa",
    "depth": 0,
    "end": 2,
    "start": 0,
    "type": "text",
  },
  Object {
    "close": ")",
    "depth": 0,
    "end": 17,
    "nodes": Array [
      Object {
        "content": "bb",
        "depth": 1,
        "end": 5,
        "start": 3,
        "type": "text",
      },
      Object {
        "close": ")",
        "depth": 1,
        "end": 14,
        "nodes": Array [
          Object {
            "content": "cc",
            "depth": 2,
            "end": 8,
            "start": 6,
            "type": "text",
          },
          Object {
            "close": ")",
            "depth": 2,
            "end": 11,
            "nodes": Array [
              Object {
                "content": "dd",
                "depth": 3,
                "end": 11,
                "start": 9,
                "type": "text",
              },
            ],
            "open": "(",
            "start": 8,
            "type": "bracket",
          },
          Object {
            "content": "cc",
            "depth": 2,
            "end": 14,
            "start": 12,
            "type": "text",
          },
        ],
        "open": "(",
        "start": 5,
        "type": "bracket",
      },
      Object {
        "content": "bb",
        "depth": 1,
        "end": 17,
        "start": 15,
        "type": "text",
      },
    ],
    "open": "(",
    "start": 2,
    "type": "bracket",
  },
  Object {
    "content": "aa",
    "depth": 0,
    "end": 20,
    "start": 18,
    "type": "text",
  },
]
`;
